--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ footer>h6 {
     margin: 3px;
     padding: 3px;
     border: 1px solid silver;
-    transition: transfotm 0.5s;
+    transition: transform 0.5s;
 }
 
 .nav-img:hover {
@@ -37,11 +37,11 @@ section {
 
 #logo-img {
     width: 75%;
-    margin-top: 20%;
 }
 
 .mini {
     width: 100%;
+    /* height: 100px; */
     margin: 2px;
     border: 1px solid silver;
 }
@@ -49,4 +49,12 @@ section {
 .mini:hover {
     cursor: pointer;
     box-shadow: 0px 0px 10px gray;
+}
+
+#back {
+    width: 50px;
+}
+
+#back:hover {
+    cursor: pointer;
 }
