--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -42,11 +42,14 @@ progress {
     position: absolute;
     left: 0px;
     top: 0px;
+    display: none;
 }
 
 .arrow {
     width: 36px;
+    margin: 0px 15px -12px 15px;
     transition: transform 1s;
+    display: none;
 }
 
 .arrow:hover {
