--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,11 +47,17 @@ progress {
 
 .arrow {
     width: 36px;
-    margin: 0px 15px -12px 15px;
+    margin: 0px 5px -12px;
     transition: transform 1s;
     display: none;
 }
 
 .arrow:hover {
     cursor: pointer;
+}
+#right-arrow{
+    opacity: 0.2;
+}
+#stop-button{
+    opacity: 0.2;
 }
