--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,17 @@
     border: 1px solid silver;
 }
 
-.shop-item img{
+img{
     max-width: 180px;
+}
+.delCard{
+    background-color: rgb(246, 117, 117);
+}
+.addCart{
+    background-color: lightgreen;
+}
+.basket-container{
+    display: flex;
+    flex-wrap: wrap;
+    border: 5px solid silver;
 }
